SERVER-17923 prohibit database/collection actions when bg index is running