src/mongo/db/repl/oplog.cpp
@@ -745,6 +745,7 @@ namespace {
                     Lock::TempRelease release(txn->lockState());
 
                     BackgroundOperation::awaitNoBgOpInProgForDb(nsToDatabaseSubstring(ns));
+                    txn->recoveryUnit()->commitAndRestart();
                     break;
                 }
                 case ErrorCodes::BackgroundOperationInProgressForNamespace: {
@@ -753,6 +754,7 @@ namespace {
                     Command* cmd = Command::findCommand(o.firstElement().fieldName());
                     invariant(cmd);
                     BackgroundOperation::awaitNoBgOpInProgForNs(cmd->parseNs(nsToDatabase(ns), o));
+                    txn->recoveryUnit()->commitAndRestart();
                     break;
                 }
                 default:
